--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Quickgrab | Connect Shoppers & Travellers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <script src="main.js"></script>
 </head>
 <body>
