Added required meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="og:title" content="Quickgrab" />
+    <meta name="og:type" content="Website"/>
+    <meta name="og:url" content="http://www.quickgrab.io" />
+    <meta name="og:site_name" content="Quickgrab"/>
+    <meta name="og:description" content="Quickgrab is a platform that connects shoppers and travelers who help each other access the world of offline and online marketplace" />
+
+    <meta name="fb:page_id" content="" />
+
+    <meta name="og:email" content="" />
+    <meta name="og:phone_number" content="" />
+    <meta name="og:street-address" content="" />
+    <meta name="og:postal-code" content="" />
+    <meta name="og:country-name" content="NIGERIA" />
+
+    
+    <meta name="author" content="Devops Nigeria Team, devopsnigeria@gmail.com">
+    <meta name="owner" content="Quickgrab">
+    <meta name="keywords" content="Travellers, Shoppers, Earn, Income, Products, Shop, Amazon, Ebay, Aliexpress, Jumia, Stores, Local Stores, Offline Stores, Online Stores, Konga, Technology, Connect" />
+
     <title>Quickgrab | Connect Shoppers & Travellers</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
