--- a/index.html
+++ b/index.html
@@ -26,34 +26,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
+    <!--- custom css -->
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
+
+    <!--- font-awesome css-->
+    <link rel="stylesheet" type="text/css" href="./css/fontawesome.css" />
+
     <script src="main.js"></script>
 </head>
 <body>
-    <div class="">
-        <div class="container">
-            <div class="row">
-                
-            </div>
-        </div>
-    </div>
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-5 col-md-3 col-xs-8">
-                    <div class="logo">
-                        <a href="https://www.quickgrab.io">
-                            <img src="./images/logo.png" class="img-responsive" alt="QuickGrab Official Logo" />
-                        </a>
-                    </div>
-                </div>
-                <div class="col-sm-7 col-md-9 col-xs-2">
-                    <div class="navigation row">
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    
 </body>
 </html>
