--- a/index.html
+++ b/index.html
@@ -26,91 +26,62 @@
     <title>Quickgrab | Connecting Shoppers & Travellers</title>
 
     <!--- custom css -->
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/e.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/animate.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/fontawesome.css" />
 
-    <!--- font-awesome css-->
-    <link rel="stylesheet" type="text/css" href="./css/fontawesome.css" />
 
     <script src="main.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
 
 </head>
 <body>
+    <div class="hero">
+        <header class="">
+
+        </header>
+    </div>
     <section>
         <div class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12 text-center">
-                        <h1 style="font-size: 16px; color: #373a3c;">Quickgrab is trusted by all online stores</h1>
+            <div class="container" style="height: 90px;">
+                <div class="row h-100">
+                    <div class="col-md-4">
+                        <div class="row h-100 no-gutters">
+                            <div class="col-md-3">
+                                <i class="fab fa-opencart fa-3x" style="margin-top: 1rem;"></i>
+                            </div>
+                            <div class="col-md-9 no-gutter">
+                                <h1 style="font-size: 18px;">Verified Shoppers & Travellers</h1>
+                                <p>100% Verified Users & Products</p>
+                            </div>
+                        </div>     
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-sm-6 col-xs-12 text-center">
-                        <h1>For Shoppers</h1>
-                        <p>You can order just about anything on Quickgrab, from baby clothes and kids toys to tech gadgets and nutritional supplements from around the world and get it delivered to you by travellers</p>
-                        <button class="btn btn-primary"><i class="fab fa-cart"></i>&nbsp; Shop Online Product</button>
+                    <div class="col-md-4">
+                        <div class="row h-100 no-gutters">
+                            <div class="col-md-3">
+                                    <i class="fab fa-paypal fa-3x" style="margin-top: 1rem;"></i>
+                            </div>
+                            <div class="col-md-9 no-gutter">
+                                <h1 style="font-size: 18px;">Multiple Payment Options</h1>
+                                <p>We accept Visa, Master & Debit Card</p>
+                            </div>
+                        </div> 
                     </div>
-                    <div class="col-md-6 col-sm-6 col-xs-12 text-center">
-                        <h1>For Travellers</h1>
-                        <p>Subsidize your trip every time your travel with Grabr. Our travelers usually deliver a handful of items and earn upwards of $300 per trip. Not only will you make money traveling, you’ll meet amazing locals along the way</p>
-                        <button class="btn btn-primary"><i class="fab fa-cart"></i>&nbsp; Earn Cash Travelling</button>
+                    <div class="col-md-4">
+                        <div class="row h-100 no-gutters">
+                            <div class="col-md-3">
+                                    <i class="fab fa-accessible-icon fa-3x" style="margin-top: 1rem;"></i>
+                            </div>
+                            <div class="col-md-9 no-gutter">
+                                <h1 style="font-size: 18px;">Guarantee Delivery</h1>
+                                <p>Secure Location Delivery Anywhere</p>
+                            </div>
+                        </div> 
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5 col-sm-6 col-xs-12">
-                    <a href="#"><img src="./images/logo.png" alt="Quickgrab" /></a>
-                    <p style="margin-top: 12px;">
-                        10th Floor, Western House, 8-10 Broad Street   
-                    <br>
-                        Lagos Island, Lagos-NG.
-                    <br>
-                        copyright &copy;
-                    </p>
-                </div>
-                <div class="col-md-4 col-sm-6 col-xs-12 links">
-                    <ul>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">How Quickgrab Works</a></li>
-                        <li><a href="#">Help Center</a></li>
-                        <li><a href="#">Affiliate</a></li>
-                        <li><a href="#">Blog</a></li>      
-                        <li><a href="#">Careers</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <ul>
-                        <li><a href="#">Testimonials</a></li>
-                        <li><a href="#">Community</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Job Opportunities</a></li>      
-                        <li><a href="#">Trust & Safety</a></li>
-                    </ul>
-                </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-md-6 col-xs-12 col-sm-6">
-                    <a href="#"><i class="fab fa-facebook-square fa-2x" style="color: #000;"></i></a>
-                    <a href="#"><i class="fab fa-twitter fa-2x" style="color: #000;"></i></a>
-                    <a href="#"><i class="fab fa-pinterest fa-2x" style="color: #000;"></i></a>
-                    <a href="#"><i class="fab fa-instagram fa-2x" style="color: #000;"></i></a>
-                    <a href="#"><i class="fab fa-youtube fa-2x" style="color: #000;"></i></a>
-                    <a href=""><i class="fab fa-vk fa-2x" style="color: #000;"></i></a>
-                </div>
-                <div class="col-md-6 col-xs-12 col-sm-6">
-
-                </div>
-            </div>
-            <div class="row">
-
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
