--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 
     <script src="main.js"></script>
+    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
 
 </head>
@@ -84,18 +85,54 @@
             </div>
         </div>
     </header>
-    <section class="row-wrapper">
+    <div class="hero hero-wrapper">
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-xs-12 col-sm-12 col-md-12 text-center">
                     <h1>Connects Shopper & Travellers</h1>
                     <h2 class="lead">Quickgrab for EASY and AFFORDABLE transactions</h2>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 text-center">
-                    <button class="btn btn-lg"><i class="fab fa-pinterest fa-2x" style="color: #000;"></i>Create Order</button>
+            </div>
+        </div>
+    </div>
+    <div class="overview">
+        <div class="container" style="height: 90px;">
+            <div class="row h-100">
+                <div class="col-md-4">
+                    <div class="row h-100 no-gutters">
+                        <div class="col-md-3">
+                            <i class="fab fa-opencart fa-4x" style="margin-top: 1rem;"></i>
+                        </div>
+                        <div class="col-md-9 no-gutter">
+                            <h1 style="font-size: 18px;">Verified Shoppers & Travellers</h1>
+                            <p>100% Verified Users & Products</p>
+                        </div>
+                    </div>     
+                </div>
+                <div class="col-md-4">
+                    <div class="row h-100 no-gutters">
+                        <div class="col-md-3">
+                                <i class="fab fa-paypal fa-4x" style="margin-top: 1rem;"></i>
+                        </div>
+                        <div class="col-md-9 no-gutter">
+                            <h1 style="font-size: 18px;">Multiple Payment Options</h1>
+                            <p>We accept Visa, Master & Debit Card</p>
+                        </div>
+                    </div> 
+                </div>
+                <div class="col-md-4">
+                    <div class="row h-100 no-gutters">
+                        <div class="col-md-3">
+                                <i class="fab fa-accessible-icon fa-4x" style="margin-top: 1rem;"></i>
+                        </div>
+                        <div class="col-md-9 no-gutter">
+                            <h1 style="font-size: 18px;">Guarantee Delivery</h1>
+                            <p>Secure Location Delivery Anywhere</p>
+                        </div>
+                    </div> 
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 </body>
 </html>
