--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/fontawesome.css" />
 
 
-    <script src="main.js"></script>
-    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/script.js"></script>
+    
+    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.js"></script>
 
 </head>
 <body>
@@ -64,7 +63,7 @@
         <div class="navigation">
             <div class="container">
                 <nav class = "navbar navbar-expand-lg">
-                    <a class = "navbar-brand" href = "#"><img src="" alt="QuickGrab" class="navbar-logo"></a>
+                    <a class = "navbar-brand" href = "#"><img src="" alt="QuickGrab" class="navbar-logo d-md-block d-lg-none"></a>
                     <button class = "navbar-toggler navbar-toggler-right" type = "button" data-toggle = "collapse" 
                         data-target = "#navbarNavDropdown" aria-controls = "navbarNavDropdown" 
                         aria-expanded = "false" aria-label = "Toggle navigation">
@@ -95,16 +94,17 @@
             </div>
         </div>
     </div>
-    <div class="overview">
-        <div class="container" style="height: 90px;">
+    
+    <div class="overview d-md-none d-lg-block d-sm-none d-none">
+        <div class="container" style="height: 100px;">
             <div class="row h-100">
                 <div class="col-md-4">
                     <div class="row h-100 no-gutters">
                         <div class="col-md-3">
-                            <i class="fab fa-opencart fa-4x" style="margin-top: 1rem;"></i>
+                            <i class="fab fa-opencart fa-5x" style="margin-top: 1rem; color: #fff"></i>
                         </div>
                         <div class="col-md-9 no-gutter">
-                            <h1 style="font-size: 18px;">Verified Shoppers & Travellers</h1>
+                            <h1 style="font-size: 18px;">Verified Buyers & Travellers</h1>
                             <p>100% Verified Users & Products</p>
                         </div>
                     </div>     
@@ -112,7 +112,7 @@
                 <div class="col-md-4">
                     <div class="row h-100 no-gutters">
                         <div class="col-md-3">
-                                <i class="fab fa-paypal fa-4x" style="margin-top: 1rem;"></i>
+                            <i class="fab fa-paypal fa-5x" style="margin-top: 1rem; margin-left: 1rem; color: #fff""></i>
                         </div>
                         <div class="col-md-9 no-gutter">
                             <h1 style="font-size: 18px;">Multiple Payment Options</h1>
@@ -123,7 +123,7 @@
                 <div class="col-md-4">
                     <div class="row h-100 no-gutters">
                         <div class="col-md-3">
-                                <i class="fab fa-accessible-icon fa-4x" style="margin-top: 1rem;"></i>
+                            <i class="fab fa-accessible-icon fa-5x" style="margin-top: 1rem; margin-left: 1rem; color: #fff""></i>
                         </div>
                         <div class="col-md-9 no-gutter">
                             <h1 style="font-size: 18px;">Guarantee Delivery</h1>
