--- a/index.html
+++ b/index.html
@@ -118,22 +118,35 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body mx-5">
-                <div class="md-form mb-5">
-                    <i class="fa fa-user prefix grey-text"></i>
-                    <input type="text" id="orangeForm-name" class="form-control validate">
-                    <label data-error="wrong" data-success="right" for="orangeForm-name">Your name</label>
-                </div>
-                <div class="md-form mb-5">
-                    <i class="fa fa-envelope prefix grey-text"></i>
-                    <input type="email" id="orangeForm-email" class="form-control validate">
-                    <label data-error="wrong" data-success="right" for="orangeForm-email">Your email</label>
-                </div>
-                <div class="md-form mb-4">
-                    <i class="fa fa-lock prefix grey-text"></i>
-                    <input type="password" id="orangeForm-pass" class="form-control validate">
-                    <label data-error="wrong" data-success="right" for="orangeForm-pass">Your password</label>
-                </div>
+            <div class="modal-body mx-4 my-4 p-0">
+                <form>
+                    <div class="form-group row m-0 mb-4">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Firstname</label>
+                        <div class="col-sm-9 p-0">
+                            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        </div>
+                    </div>
+                    <div class="form-group row m-0 mb-4">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Lastname</label>
+                        <div class="col-sm-9 p-0">
+                            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        </div>
+                    </div>
+
+                    <div class="form-group row m-0 mb-4">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Email</label>
+                        <div class="col-sm-9 p-0">
+                            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        </div>
+                    </div>
+
+                    <div class="form-group row m-0">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Password</label>
+                        <div class="col-sm-9 p-0">
+                            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        </div>
+                    </div>
+                </form>
             </div>
             <div class="modal-footer d-flex justify-content-center">
               <button class="btn btn-default btn-rounded">Get Started</button>
@@ -225,22 +238,80 @@
         </div>
     </div>
 
-    <section>
-        
+    <section class="py-5">
+        <div class="wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7 cto pb-5 mb-xs-5">
+                        <div class="mt-5"></div>
+                        <h1 class=" display-3 pt-5">Join our Global Community to Shop <br> Anywhere & Travel Everywhere</h1>
+                        <div style="height:5px;width:110px;background:#ff6600;opacity:0.5;"></div>
+                        <p class="display-4 my-4">Even from the convenience of your home, office<br>or anywhere shop with QuickGrab</p>
+                        <button class="btn btn-primary btn-lg">Order with QuickGrab</button>
+                    </div>
+                    <div class="col-md-5 col-xs-12">
+                        <img class="" src="./images/office.svg" width="468">
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
-        <div class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 col-xs-12 col-sm-12">
-                        
-                    </div>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="https://quickgrab.io"><img src="./images/flaticon-logo-footer.svg" width="200" class="mt-5"></a>
+                    <ul class="nav justify-content-center">
+                        <li class="nav-item"><a class="nav-link" href="">Terms & condition</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Privacy policy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Cookies policy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Copyrights Notification</a></li>
+                    </ul>
+                    <ul class="nav justify-content-center mb-2">
+                        <li class="nav-item"><a class="nav-link" href=""><i class="fab fa-pinterest fa-2x"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href=""><i class="fab fa-instagram fa-2x"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href=""><i class="fab fa-youtube fa-2x"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href=""><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                        <li class="nav-item"><a class="nav-link" href=""><i class="fab fa-google-plus fa-2x"></i></a></li>
+                    </ul>
                 </div>
-                <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-xs-12 pt-4">
+                    <h5>Information</h2>
+                    <ul class="nav flex-column">
+                        <li class="nav-item"><a class="nav-link" href="">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">How Quickgrab works</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Help Center</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Careers</a></li>
+                        <li class="nav-item"><a class="nav-link" href=""></a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 col-xs-12 pt-4">
+                    <h5>Community</h2>
+                    <ul class="nav flex-column">
+                        <li class="nav-item"><a class="nav-link" href="">Quickgrab Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Shop & Travel Program</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Job Opportunities</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 col-xs-12 pt-4">
+                    <h5>content</h2>
+                    <ul class="nav flex-column">
+                        <li class="nav-item"><a class="nav-link" href="">Offline Stores</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Trust & Safety</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Online Stores</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Quickgrab Business</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row copyrights">
+                <div class="col-md-12 pt-3">
+                    <div style="height:1px;width:150px;background:#ff6600;margin:1% auto;opacity:0.5;"></div>
+                    <p>QuickGrab is a project by <a href="">quickgrab</a>
+                    <br>
+                    © 2013-2018 Quickgrab Company N.G. All rights reserved.</p>
                 </div>
             </div>
         </div>
