--- a/index.html
+++ b/index.html
@@ -92,18 +92,17 @@
             <div class="modal-content">
                 <div class="modal-body">
                     <div class="top-strip"></div>
-                    <a class="h2" href="https://www.fiverr.com/sunlimetech/design-and-fix-your-bootstrap-4-issues" target="_blank">QuickGrab</a>
-                    <h3 class="pt-5 mb-0 text-secondary">$10 Coupon Code</h3>
-                    <p class="pb-1 text-muted"><small>Get Our Coupon Code Using Your Registered Email.</small></p>
+                    <h3 class="pt-4 mb-3 text-secondary">Earn a coupon code</h3>
+                    <p class="pb-1 text-muted"><small>Get our <span style="text-transform: uppercase;">Coupon Code</span> using your registered email.</small></p>
                     <form>
                         <div class="input-group mb-3 w-75 mx-auto">
-                          <input type="email" class="form-control" placeholder="quickgrab@gmail.com" aria-label="Recipient's username" aria-describedby="button-addon2" required>
+                          <input type="email" class="form-control" placeholder="coupon@quickgrab.io" aria-label="Recipient's username" aria-describedby="button-addon2" required>
                           <div class="input-group-append">
                             <button class="btn btn-primary" type="button" id="button-addon2"><i class="fa fa-paper-plane"></i></button>
                           </div>
                         </div>
                     </form>
-                    <p class="pb-1 text-muted"><small>Your email is safe with us. We won't spam.</small></p>
+                    <p class="pb-1 text-danger"><small>Only registered and active user can earn</small></p>
                     <div class="bottom-strip"></div>
                 </div>
             </div>
@@ -158,22 +157,26 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header text-center">
-              <h5 class="modal-title w-100 font-weight-bold">Account</h5>
+              <h5 class="modal-title w-100 font-weight-bold display-3">Get Access</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body mx-3">
-                <div class="md-form mb-5">
-                    <i class="fa fa-envelope prefix grey-text"></i>
-                    <input type="email" id="defaultForm-email" class="form-control validate">
-                    <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
-                </div>
-                <div class="md-form mb-4">
-                    <i class="fa fa-lock prefix grey-text"></i>
-                    <input type="password" id="defaultForm-pass" class="form-control validate">
-                    <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
-                </div>
+                <form>
+                    <div class="form-group row m-0 mb-4">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Email</label>
+                        <div class="col-sm-9 p-0">
+                            <input type="password" class="form-control" id="inputPassword" placeholder="account@quickgrab.com">
+                        </div>
+                    </div>
+                    <div class="form-group row m-0 mb-4">
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Password</label>
+                        <div class="col-sm-9 p-0">
+                            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        </div>
+                    </div>
+                </form>
             </div>
             <div class="modal-footer d-flex justify-content-center">
               <button type="button" class="btn btn-secondary">Access</button>
@@ -186,8 +189,8 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-7 mx-auto my-3">
-                    <h1>Go Big, Start Small</h1>
-                    <h2>QuickGrab helps shoppers and travelers explore the world of stores</h2>
+                    <h1>Simple. Secure. Seamless!</h1>
+                    <h2>Connecting shoppers and travelers explore the world of stores</h2>
                 </div>
             </div>
             <div class="row">
@@ -209,98 +212,71 @@
     </div>
     
     <section>
-        <div class="section">
+        <div class="section inn-content buyers pb-5">
             <div class="container">
-                <h4 class="display-2 text-center pt-5 mb-5">How QuickGrab Work</h4>
-                    <div class="row">
-                	    <div class="col-md-12 ">
-                            <nav>
-                                <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
-                                    <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-shop" role="tab" aria-controls="nav-home" aria-selected="true">For Shoppers</a>
-                                    <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-travel" role="tab" aria-controls="nav-profile" aria-selected="false">For Travellers</a>
-                            </nav>
-                            <div class="tab-content py-5" id="nav-tabContent">
-                                <div class="tab-pane fade show active main-timeline4" id="nav-shop" role="tabpanel" aria-labelledby="nav-home-tab">
-                                    <div class="timeline">
-                                        <span class="timeline-content">
-                                            <span class="year">003</span>
-                                            <div class="inner-content py-4">
-                                                <h3 class="title display-3 mb-2">Traveller Reward</h3>
-                                                <p class="description display-4 mb-0">QuickGrab auto-calculates all applicable fees, including the monetary reward you agree to pay your traveler for delivering your item.</p>
-                                            </div>
-                                        </span>
-                                    </div>
-                                    <div class="timeline">
-                                        <span class="timeline-content">
-                                            <span class="year">001</span>
-                                            <div class="inner-content py-4">
-                                                <h3 class="title display-3 mb-2">Product Information</h3>
-                                                <p class="description display-4 mb-0">With QuickGrab, you can get any item from around the world. Get started by creating an order with required details of product</p>
-                                            </div>
-                                        </span>
-                                    </div>
-                                    <div class="timeline">
-                                        <span class="timeline-content">
-                                            <span class="year">004</span>
-                                            <div class="inner-content py-4">
-                                                <h3 class="title display-3 mb-2">Item Delivery</h3>
-                                                <p class="description display-4 mb-0">Coordinate a time and public place to meet your traveler for your item. Ensure to confirm delivery so that your traveler gets paid.</p>
-                                            </div>
-                                        </span>
-                                    </div>
-                                    <div class="timeline">
-                                        <span class="timeline-content">
-                                            <span class="year">002</span>
-                                            <div class="inner-content py-4">
-                                                <h3 class="title display-3 mb-2">Delivery Offer</h3>
-                                                <p class="description display-4 mb-0">We would publish your orders once its created & travelers heading to your city will bid to deliver it by making an offer.</p>
-                                            </div>
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="tab-pane fade" id="nav-travel" role="tabpanel" aria-labelledby="nav-profile-tab">
-                                    <div class="main-timeline4">
-                                        <div class="timeline">
-                                            <span class="timeline-content">
-                                                <span class="year">003</span>
-                                                <div class="inner-content py-4">
-                                                    <h3 class="title display-3 mb-2">Purchase Item</h3>
-                                                    <p class="description display-4 mb-0">This way, you know exactly what you are bringing. Upon delivery, you will be reimbursed for the price of the item and paid your reward.</p>
-                                                </div>
-                                            </span>
-                                        </div>
-                                        <div class="timeline">
-                                            <span class="timeline-content">
-                                                <span class="year">001</span>
-                                                <div class="inner-content py-4">
-                                                    <h3 class="title display-3 mb-2">Find Order, Make Offer</h3>
-                                                    <p class="description display-4 mb-0"> Search for orders based on your travel destination. Make an offer and set your travel reward—the amount of money your shopper will pay you for delivering their item.</p>
-                                                </div>
-                                            </span>
-                                        </div>
-                                        <div class="timeline">
-                                            <span class="timeline-content">
-                                                <span class="year">004</span>
-                                                <div class="inner-content py-4">
-                                                    <h3 class="title display-3 mb-2">Deliver Order</h3>
-                                                    <p class="description display-4 mb-0">Coordinate a time and public place to meet your traveler for your item. Ensure to confirm delivery so that your traveler gets paid.</p>
-                                                </div>
-                                            </span>
-                                        </div>
-                                        <div class="timeline">
-                                            <span class="timeline-content">
-                                                <span class="year">002</span>
-                                                <div class="inner-content py-4">
-                                                    <h3 class="title display-3 mb-2">Order Confirmation</h3>
-                                                    <p class="description display-4 mb-0">Upon confirmation of order being received by shopper, we’ll transfer payment to your account on file. </p>
-                                                </div>
-                                            </span>
+                <div class="row">
+                    <div class="col-md-12 col-lg-10 col-xl-8 mx-lg-auto">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-6 col-xs-12">
+                                <h2 class="font-italic mt-5">Save while you shop the world</h2>
+                                <p class="text-justify mb-4">Say no to custom and tax fee, say no to high shipping rate. With QuickGrab you get a seemless
+                                    shopping experience round the world, you save while you shop and get your items delivered by
+                                    our travellers
+                                </p>
+                                <form>
+                                    <div class="input-group">
+                                        <input type="url" class="form-control" placeholder="Paste the URL of the product you want to get" aria-label="Product link" aria-describedby="button-addon2">
+                                        <div class="input-group-append">
+                                            <button class="btn btn-primary" type="button" id="button-addon2"><i class="fa fa-paper-plane"></i></button>
                                         </div>
                                     </div>
-                                </div>
+                                </form>
                             </div>
-                        
+                            <div class="col-sm-12 col-md-6 col-xs-12">
+                                <img class="" src="./images/icon-p-pay-bills@2x.png" style="max-width: 100%; height: auto;">
+                            </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section inn-content travelers">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-10 col-xl-8 mx-lg-auto">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img class="" src="./images/icon-p-pay-anyone@2x.png" style="max-width: 100%; height: auto;">
+                            </div>
+                            <div class="col-sm-6">
+                                <h2 class="font-italic mt-5">How to <strong>Earn</strong> while you travel</h2>
+                                <p class="text-justify mb-4">As a traveller, QuickGrab offers you the opportunity to make extra cash while you 
+                                    travel, all you just have to do is make an offer to deliver a shopper item and make
+                                extra income</p>
+                                <button class="btn btn-default">Travel & Earn</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                                    <li class="nav-item">
+                                      <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                      <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</a>
+                                    </li>
+                                    <li class="nav-item">
+                                      <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</a>
+                                    </li>
+                                  </ul>
+                    </div>
                 </div>
             </div>
         </div>
